Fix icons for the GIF Search
And remove a box-shadow that doesn't look good anymore

--- a/app/javascript/flavours/glitch/styles/components/tenor.scss
+++ b/app/javascript/flavours/glitch/styles/components/tenor.scss
@@ -11,10 +11,6 @@
   margin: 10px;
 }
 
-.react-tenor-active {
-  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 20%);
-}
-
 .react-tenor--search {
   box-sizing: border-box;
   color: #555;
